fix: overflow fix

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,4 +3,5 @@
   max-width: 282px;
   background-color: white;
   border-radius: 10px;
+  overflow: hidden;
 }
